feat : Create only css slides with descriptions

--- a/slide.html
+++ b/slide.html
@@ -12,6 +12,7 @@
             <div style="background-color: lightblue;"></div>
             <div style="background-color: lightgoldenrodyellow;"></div>
             <div style="background-color: lightpink;"></div>
+            <!-- 마지막에 넘어가는 장면을 위해 준비된 아이 -->
             <div style="background-color: lightblue;"></div>
         </div>
     </div>
